complete login/signup/logout functionality

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,4 +18,5 @@
  @import "./navbar.css";
  @import "./body.css";
  @import "./signup_container.css";
+ @import "./splash.css";
  @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
