--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,15 @@
 <main id='root'></main>
+
 <script type="text/javascript">
     window.logo = "<%= image_url('logo_orange.png') %>"
+    window.signinIcon = "<%= image_url('signin_icon.svg') %>"
+    window.splashBanner = "<%= image_url('splash_banner.jpeg') %>"
 </script>
+
+<% if logged_in? %>
+  <script type="text/javascript">
+    window.currentUser = <%= render(
+      "api/users/user.json.jbuilder",
+      user: current_user
+    ).html_safe %></script>
+<% end %>
