change filetype jpeg => jpg

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -3,7 +3,7 @@
 <script type="text/javascript">
     window.logo = "<%= image_url('logo_orange.png') %>"
     window.signinIcon = "<%= image_url('signin_icon.svg') %>"
-    window.splashBanner = "<%= image_url('splash_banner.jpeg') %>"
+    window.splashBanner = "<%= image_url('splash_banner.jpg') %>"
 </script>
 
 <% if logged_in? %>
