--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,8 @@
  *= require_self
  */
 
- @import "./css_reset.css";
+ /* @import "./css_reset.css";
  @import "./navbar.css";
  @import "./body.css";
  @import "./splash.css";
- @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+ @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap'); */
