--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -1,5 +1,7 @@
 $input-border-blue: #1f45e0;
 $input-caption-blue: #4b6ae7;
+$follow-button-color: #3659e3;
+$follow-button-border-radius: 5px;
 
 body {
     font-family: 'Helvetica';
@@ -24,4 +26,37 @@ input {
     background-color: white;
     font-size: 14px;
     cursor: pointer;
+}
+
+.follow-button {
+    border: 2px $follow-button-color solid;
+    border-radius: $follow-button-border-radius;
+    color: $follow-button-color;
+    width: 55px;
+    padding: 4px;
+    margin-left: 10px;
+}
+
+.ticket-bar {
+    border: 1px red solid;
+    display: flex;
+    align-items: center;
+}
+
+.icons {
+    display: flex;
+    width: 65px;
+    margin-left: 22px;
+    border: 1px red solid;
+    justify-content: space-between;
+}
+
+.share-icon {
+    width: 22px;
+    height: 22px;
+}
+
+.heart-icon {
+    width: 22px;
+    height: 22px;
 }
