--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,6 +7,7 @@ $navbar-text: #c2c2cc;
     justify-content: space-between;
     align-items: center;
     height: 59px;
+    font-family: Helvetica;
     background-color: $navbar-background;
     color: $navbar-text;
 }
