--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -4,10 +4,13 @@
     window.logo = "<%= image_url('logo_orange.png') %>"
     window.signinIcon = "<%= image_url('signin_icon.svg') %>"
     window.splashBanner = "<%= image_url('splash_banner.jpg') %>"
+    window.photoBalloons = "<%= image_url('photo_balloons.jpg') %>"
     window.logoWhiteFull = "<%= image_url('logo_white_full.png') %>"
     window.textIcon = "<%= image_url('text_icon.svg') %>"
     window.mapIcon = "<%= image_url('map_icon.svg') %>"
     window.calendarIcon = "<%= image_url('calendar_icon.svg') %>"
+    window.shareIcon = "<%= image_url('share_icon.svg') %>"
+    window.heartIcon = "<%= image_url('heart_icon.svg') %>"
 </script>
 
 <% if logged_in? %>
