--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -60,3 +60,71 @@ input {
     width: 22px;
     height: 22px;
 }
+
+.event-card {
+    .event-card-picture {
+        width: 370px;
+        height: 190px;
+        background-size: cover;
+    }
+    .event-card-details {
+        background-color: pink;
+        width: 370px;
+        height: 190px;
+    }
+    .event-card-details {
+        .card-buttons {
+            text-align: right;
+            margin-right: 10px;
+            position: relative;
+            bottom: 20px;
+            border: 1px red solid;
+            .event-card-share-button {
+                background-color: white !important;
+                width: 45px;
+                height: 45px;
+                margin: 0 5px;
+                border-radius: 40px;
+                
+                .share-icon-img {
+                    width: 18px;
+                }
+            }
+            .event-card-heart-button {
+                width: 45px;
+                height: 45px;
+                background-color: white;
+                margin: 0 5px;
+                border-radius: 40px;
+                
+                .heart-icon-img {
+                    width: 18px;
+                }
+            }   
+        }
+        .date-span {
+            width: 20%;
+            height: 70px;
+
+            .month {
+                display: block;
+            }
+            .date {
+                display: block;               
+            }
+        }
+        .card-details {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+
+            .card-title {
+                font-size: 25px;
+            }
+        }
+        .date-details {
+            border: 2px red solid;
+            padding-left: 25px;
+        }
+    }
+}
