add but later removed script tag

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -11,6 +11,7 @@
     window.calendarIcon = "<%= image_url('calendar_icon.svg') %>"
     window.shareIcon = "<%= image_url('share_icon.svg') %>"
     window.heartIcon = "<%= image_url('heart_icon.svg') %>"
+    window.closeIcon = "<%= image_url('close_icon.svg') %>"
 </script>
 
 <% if logged_in? %>
