--- a/app/assets/stylesheets/event_form.scss
+++ b/app/assets/stylesheets/event_form.scss
@@ -141,7 +141,25 @@ h1 + p {
     margin-bottom: 10px;
 }
 
-.tag-spans {
+.tag-button {
+    display: inline-block;
+    background-color: #f8f7fa;
+    padding: 8px 12px;
+    border-radius: 18px;
+    margin-right: 15px;
+    margin: 5px 0px;
+    font-size: 13px;
+    
+    img {
+        width: 12px;
+        cursor: pointer;
+        position: relative;
+        top: 1px;
+        margin-left: 10px;
+    }
+}
+
+.tag-counts {
     justify-content: space-between;
     width: 365px;
     height: 4px;
