--- a/app/assets/stylesheets/css_reset.css
+++ b/app/assets/stylesheets/css_reset.css
@@ -2,7 +2,7 @@ html, body, section, article,
 h1, h2, p, strong, em, a {
   margin: 0;
   border: 0;
-  padding: 0;
+  padding: 0 !important;
   outline: 0;
   box-sizing: inherit;
   font: inherit;
@@ -10,4 +10,5 @@ h1, h2, p, strong, em, a {
   text-align: inherit;
   color: inherit;
   background: transparent;
+  font-family: Helvetica, Arial, sans-serif
 }
