--- a/app/assets/stylesheets/event_form.scss
+++ b/app/assets/stylesheets/event_form.scss
@@ -169,3 +169,38 @@ h1 + p {
     font-size: $counter-size;
     color: #413356;
 }
+
+.address-inputs {
+    // border: 1px red solid;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    input {
+        width: 45%;
+    }
+}
+
+.submit-bar {
+    display: flex;
+    background-color: #FFFFFF;
+    border-top: 1px #eeedf2 solid;
+    padding: 15px;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+
+
+    button {
+        margin-left: 15px;
+        position: relative;
+        left: 250px;
+    }
+
+    button + button {
+        background-color: #d1410b;
+        color: #FFFFFF;
+        border: none;
+        width: 150px;
+    }
+}
