--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -2,6 +2,7 @@ $input-border-blue: #1f45e0;
 $input-caption-blue: #4b6ae7;
 $follow-button-color: #3659e3;
 $follow-button-border-radius: 5px;
+$error-red: #c5162d;
 
 body {
     font-family: 'Helvetica';
@@ -37,12 +38,6 @@ input {
     margin-left: 10px;
 }
 
-.ticket-bar {
-    border: 1px red solid;
-    display: flex;
-    align-items: center;
-}
-
 .icons {
     display: flex;
     width: 65px;
@@ -63,5 +58,60 @@ input {
 
 .spacer {
     height: 100px;
+}
+
+.styled-input {
+    width: 320px;
+    height: 50px;
+    position: relative;
+    margin-top: 20px;
+}
+
+.styled-input input {
+    font-size: 14px;
+    width: 94.5%;
+    position: absolute;
+    background: transparent;
+}
+
+.input-label {
+    position: absolute;
+    left: 14px;
+    top: 18px;
+    color: #727589;
+    font-size: 13px;
+    transition: all .1s;
+}
+
+.label-focus {
+    top: 8px;
+    font-size: 12px;
+    color: $input-caption-blue;
+}
+
+.input-focus {
+    outline: none;
+    border: 2px $input-border-blue solid;
+    padding-bottom: 0;
+    height: 36px;
+}
+
+.label-error {
+    top: 8px;
+    font-size: 12px;
+    color: $error-red;
+}
+
+.input-error {
+    outline: none;
+    border: 2px $error-red solid;
+    padding-bottom: 0;
+    height: 36px;
+}
+
+.error-message {
+    height: 0;
+    margin-top: 10px;
+    color: $error-red;
 }
 
