--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -10,9 +10,7 @@ $navbar-text: #c2c2cc;
     font-family: Helvetica;
     background-color: $navbar-background;
     color: $navbar-text;
-}
 
-.navbar {
     .logo {
         width: 130px;
         height: 38px;
@@ -27,20 +25,21 @@ $navbar-text: #c2c2cc;
         float:left;
         padding: 20px;
     }
+    a {
+        display: inline-block;
+    }   
 }
 
 .navbar-right {
     float: right;
-}
+    padding: 20px;
 
-.navbar-right {
     .btn:hover {
         color: white;
     }
+
+    a {
+        margin-left: 30px;
+    }
 }
 
-.navbar a {
-    display: inline-block;
-    padding: 20px;
-    margin: 0;
-}
