strap images to window

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -12,6 +12,7 @@
     window.shareIcon = "<%= image_url('share_icon.svg') %>"
     window.heartIcon = "<%= image_url('heart_icon.svg') %>"
     window.closeIcon = "<%= image_url('close_icon.svg') %>"
+    window.checkIcon = "<%= image_url('check_icon.svg') %>"
 </script>
 
 <% if logged_in? %>
