--- a/app/assets/stylesheets/event_form.scss
+++ b/app/assets/stylesheets/event_form.scss
@@ -148,7 +148,7 @@ h1 + p {
     padding: 8px 12px;
     border-radius: 18px;
     margin-right: 15px;
-    margin: 5px 0px;
+    margin: 5px 15px 5px 0px;
     font-size: 13px;
     
     img {
