--- a/app/assets/stylesheets/helper_components.scss
+++ b/app/assets/stylesheets/helper_components.scss
@@ -220,3 +220,10 @@ $error-red: #c5162d;
 .ticket-button:hover {
     background-color: #179C55;
 }
+
+// dashboard sidebar head
+// .dashboard-section {
+    
+.checkbar-selected {
+    background-color: white;
+}
