--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -28,6 +28,10 @@ $navbar-text: #c2c2cc;
     a {
         display: inline-block;
     }   
+    div:nth-of-type(1) {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .navbar-right {
