strap images to window

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -4,6 +4,7 @@
     window.logo = "<%= image_url('logo_orange.png') %>"
     window.signinIcon = "<%= image_url('signin_icon.svg') %>"
     window.splashBanner = "<%= image_url('splash_banner.jpg') %>"
+    window.splashBanner2 = "<%= image_url('splash_banner_2.jpg') %>"
     window.photoBalloons = "<%= image_url('photo_balloons.jpg') %>"
     window.logoWhiteFull = "<%= image_url('logo_white_full.png') %>"
     window.textIcon = "<%= image_url('text_icon.svg') %>"
@@ -13,6 +14,7 @@
     window.heartIcon = "<%= image_url('heart_icon.svg') %>"
     window.closeIcon = "<%= image_url('close_icon.svg') %>"
     window.checkIcon = "<%= image_url('check_icon.svg') %>"
+    window.dropdownIcon = "<%= image_url('dropdown_icon.svg') %>"
 </script>
 
 <% if logged_in? %>
