--- a/app/assets/stylesheets/event_dashboard.scss
+++ b/app/assets/stylesheets/event_dashboard.scss
@@ -89,32 +89,38 @@ $red: 1px red solid;
 
 // dashboard
 .dashboard-home {
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    width: 60%;
     margin-top: 40px;
 
     h1 {
         font-size: 30px;
         font-weight: bold;
     }
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 250px;
 }
 
 .dashboard-search {
     display: flex;
     justify-content: align-items;
+    border-radius: 0;
+    border: .1px #dbdae2 solid;
+    width: 40%;
+    padding: 5px;
+
+    img {
+        width: 6%;
+        padding-left: 10px;
+    }
 
     input, select {
         font-size: 14px;
         padding: 10px;
-        width: 35%;
+        width: 100%;
         height: 20px;
-        // position: absolute;
         background: transparent;
-        margin-right: 10px;
+        outline: none;
+        border: none;
     }
 
     select {
@@ -155,6 +161,11 @@ $red: 1px red solid;
         display: flex;
         flex-direction: column;
     }
+
+    .row-date {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .dashboard-index-head {
@@ -162,6 +173,13 @@ $red: 1px red solid;
     width: 100%;
     height: 50px;
     background-color: #f8f7fa;
+
+    span:nth-of-type(1) {
+        margin-left: 20px;
+        font-size: 14px;
+        color: #74778c;
+        font-weight: bold;
+    }
 }
 
 .dashboard-picture {
