--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -36,14 +36,64 @@ $navbar-text: #c2c2cc;
 
 .navbar-right {
     float: right;
-    padding: 20px;
 
     .btn:hover {
         color: white;
     }
 
-    a {
-        margin-left: 30px;
+    > a {
+        padding: 30px 15px;
     }
+
 }
 
+
+// navbar profile dropdown menu
+.profile-dropdown {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    color: #7c76a2;
+    font-size: 14px;
+    position: absolute;
+    right: 0px;
+    border: 1px #f8f7fa solid;
+    box-shadow: -2px 3px 10px #b3b3b3;
+    background: white;
+    z-index: 3;
+
+    span:nth-of-type(1) {
+        border: none;
+    }
+
+    span:nth-of-type(2) {
+        border-top: none;
+    }
+
+    > * {
+        border-top: .1px #f1eff5 solid;
+        border-bottom: .1px #f1eff5 solid;
+        padding: 20px;
+        cursor: pointer;
+    }
+
+    > :hover {
+        background: #f1f1f3;
+    }
+
+}
+
+.dropdown-logo {
+    height: 40px;
+    width: 40px;
+    object-fit: contain;
+}
+
+
+.display {
+    display: visible;
+}
+
+.display-none {
+    display: none;
+}
