add search icon

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -15,6 +15,7 @@
     window.closeIcon = "<%= image_url('close_icon.svg') %>"
     window.checkIcon = "<%= image_url('check_icon.svg') %>"
     window.dropdownIcon = "<%= image_url('dropdown_icon.svg') %>"
+    window.searchIcon = "<%= image_url('search_icon.svg') %>"
 </script>
 
 <% if logged_in? %>
