--- a/app/assets/stylesheets/event_form.scss
+++ b/app/assets/stylesheets/event_form.scss
@@ -205,6 +205,9 @@ h1 + p {
     }
 }
 
-// .details {
-
-// }
+#venueNameInput {
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-radius: 0;
+}
