--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -16,6 +16,7 @@
     window.checkIcon = "<%= image_url('check_icon.svg') %>"
     window.dropdownIcon = "<%= image_url('dropdown_icon.svg') %>"
     window.searchIcon = "<%= image_url('search_icon.svg') %>"
+    window.searchIconWhite = "<%= image_url('search_icon_white.svg') %>"
 </script>
 
 <% if logged_in? %>
